<resources>
    <string name="app_name">探球直播</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="please_input_phone_num">请填写手机号码</string>
    <string name="password">密码</string>
    <string name="please_input_password">请填写密码</string>
    <string name="please_input_money">请填写金额</string>
    <string name="immediate_login">立即登录</string>
    <string name="immediate_register">立即注册</string>
    <string name="find_pass">找回密码</string>
    <string name="use_other_login">其他登录方式</string>
    <string name="account">账号</string>
    <string name="validate_code">验证码</string>
    <string name="please_input_validate_code">请填写短信验证码</string>
    <string name="send_validate_code">发送验证码</string>
    <string name="confirm_password">确认密码</string>
    <string name="please_input_password_again">请再次输入密码</string>
    <string name="phone_num_empty">请输入手机号码/用户名</string>
    <string name="phone_num_error">请输入正确的手机号码</string>
    <string name="validate_code_empty">请输入验证码</string>
    <string name="pwd_empty">请输入密码</string>
    <string name="pwd_confirm_error">密码不一致，请重新输入</string>
    <string name="auth_failure">授权失败</string>
    <string name="auth_cancle">授权已取消</string>
    <string name="auth_login_ing">正在授权登录...</string>
    <string name="auth_success">授权成功正在登录...</string>
    <string name="home">首页</string>
    <string name="me">我</string>
    <string name="user_center">个人中心</string>
    <string name="no_zhubo">现在还没有主播</string>
    <string name="start_your_live">快快开启你的直播吧</string>
    <string name="load_failure">加载失败</string>
    <string name="ignore_unread">忽略未读</string>
    <string name="attention">已关注</string>
    <string name="no_attention">未关注</string>
    <string name="search_input">请输入要搜索的昵称或ID</string>
    <string name="loading">加载中</string>
    <string name="search_no_result">未找到相关内容</string>
    <string name="search_ing">搜索中</string>
    <string name="private_message">私信</string>
    <string name="pull_black">拉黑</string>
    <string name="no_pull_black">解除拉黑</string>
    <string name="attention2">关注</string>
    <string name="you_not_have_attention">你还没有关注别人</string>
    <string name="start_your_attention">快快加别人关注吧</string>
    <string name="fans">粉丝</string>
    <string name="he_not_have_attention">您还没有关注别人</string>
    <string name="he_not_have_fans">您还没有粉丝</string>
    <string name="no_record">暂无直播记录</string>
    <string name="kanguo">看过</string>
    <string name="no_title">无标题</string>
    <string name="signature">个性签名</string>
    <string name="pull_black_success">拉黑成功</string>
    <string name="send">发送</string>
    <string name="ignore_unread2">已忽略未读消息</string>
    <string name="delete">删除</string>
    <string name="you_are_blacked">对方暂时不接收你的消息</string>
    <string name="content_empty">内容为空</string>
    <string name="option_too_much">您发的太快了,请休息一下</string>
    <string name="edit_profile">编辑资料</string>
    <string name="my_level">我的等级</string>
    <string name="my_harvest">我要提现</string>
    <string name="my_harvest_history">提现记录</string>
    <string name="apply_auth">申请认证</string>
    <string name="about_us">关于我们</string>
    <string name="setting">设 置</string>
    <string name="live">直播</string>
    <string name="live_record">直播记录</string>
    <string name="head_img">头像</string>
    <string name="nickname">昵称</string>
    <string name="signature2">签名</string>
    <string name="birthday">生日</string>
    <string name="sex">性别</string>
    <string name="select_from_album">从相册选择</string>
    <string name="photo">拍照</string>
    <string name="select_head_img">修改头像</string>
    <string name="can_not_save_file">无法保存上传的头像，请检查SD卡是否挂载</string>
    <string name="cancel_choose">取消选择</string>
    <string name="cancel_crop">取消裁剪</string>
    <string name="cancel_set_avatar">设置头像取消</string>
    <string name="cancel_set_nickname">设置昵称取消</string>
    <string name="cancel_set_signature">设置签名取消</string>
    <string name="cancel_set_sex">设置性别取消</string>
    <string name="success_set_avatar">设置头像成功</string>
    <string name="cancel_photo">取消拍照</string>
    <string name="storage_permission_refused">您拒绝了文件读写的权限，请到设置中修改</string>
    <string name="camera_permission_refused">您拒绝了使用摄像头的权限，请到设置中修改</string>
    <string name="sex_nan">男</string>
    <string name="sex_nv">女</string>
    <string name="update_sex">修改性别</string>
    <string name="save">保存</string>
    <string name="live_record_not_find">直播回放不存在</string>
    <string name="nickname_length">昵称最多8个字</string>
    <string name="signature_length">签名最多20个字</string>
    <string name="nickname_empty">昵称不能为空</string>
    <string name="signature_empty">签名不能为空</string>
    <string name="nickname_length_error">昵称长度超出限制</string>
    <string name="signature_length_error">签名长度超出限制</string>
    <string name="update_nickname">修改昵称</string>
    <string name="update_signature">修改签名</string>
    <string name="please_input_birthday">请输入生日</string>
    <string name="please_input_right_date">请选择正确的日期</string>
    <string name="reset_pwd">修改密码</string>
    <string name="common_setting">通用设置</string>
    <string name="setting_feedback_txt">意见反馈</string>
    <string name="setting_about_txt">关于我们</string>
    <string name="setting_servicec_txt">联系客服</string>
    <string name="chech_update">检查更新</string>
    <string name="logout">退出登录</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_ing">正在清除</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="please_input_old_password">请输入旧密码</string>
    <string name="please_input_new_password">请输入新密码</string>
    <string name="comfirm_update">确认修改</string>
    <string name="no_cache">暂无缓存</string>
    <string name="tip">提示</string>
    <string name="not_update">暂不升级</string>
    <string name="immediate_use">立即使用</string>
    <string name="code_send">验证码已发送</string>
    <string name="register_ing">注册中</string>
    <string name="function">功能</string>
    <string name="charge">充值</string>
    <string name="send_lian">连送</string>
    <string name="maim">主页</string>
    <string name="songchu">送出</string>
    <string name="shouru">收入</string>
    <string name="report">举报</string>
    <string name="tiRen">踢人</string>
    <string name="gap">禁言</string>
    <string name="set_admin">设为管理</string>
    <string name="cancel_admin">取消管理</string>
    <string name="admin_list">管理员列表</string>
    <string name="cancel">取消</string>
    <string name="no_admin">暂时没有管理员</string>
    <string name="you_are_kicked">你已经被踢出房间</string>
    <string name="confirm">确定</string>
    <string name="live2">直播Live</string>
    <string name="huiyuan">会员</string>
    <string name="lianghao">靓号</string>
    <string name="zuoqi">坐骑</string>
    <string name="set_live_title">给直播写个标题吧</string>
    <string name="live_share_to">点击“横屏直播”或“竖屏直播”分享到朋友圈</string>
    <string name="qzone">QQ空间</string>
    <string name="weibo">微博</string>
    <string name="wechat">微信</string>
    <string name="pengyouquan">朋友圈</string>
    <string name="camera">拍照</string>
    <string name="album">从相册选择</string>
    <string name="choose_flie">选择文件</string>
    <string name="choose_live_type">选择直播类型</string>
    <string name="choose_image">选择图片</string>
    <string name="please_set_room_password">请设置房间密码</string>
    <string name="please_set_charge_amount">请设置收费金额\n（收益以直播结束显示为准）</string>
    <string name="charge_amount">收费金额</string>
    <string name="choose_charge">选择收费</string>
    <string name="share_error">分享出现错误</string>
    <string name="share_cancel">分享取消</string>
    <string name="share_success">分享成功</string>
    <string name="are_you_end_live">是否要结束直播？</string>
    <string name="room">房间：</string>
    <string name="live_end">直播已结束</string>
    <string name="confirm2">确\t\t定</string>
    <string name="start_live">开\t始\t直\t播</string>
    <string name="net_work_error">正在努力加载中</string>
    <string name="live_beauty">美颜</string>
    <string name="live_filter">滤镜</string>
    <string name="live_sticker">贴纸</string>
    <string name="meibai">美白</string>
    <string name="mopi">磨皮</string>
    <string name="hongrun">红润</string>
    <string name="no_music">未找到相关歌曲</string>
    <string name="music_not_found">歌曲未找到</string>
    <string name="search">搜索</string>
    <string name="record_audio_permission_refused">您拒绝了录音的权限，请到设置中修改</string>
    <string name="end">结束</string>
    <string name="start">开始</string>
    <string name="change_time_charge">已切换为计时收费房间...</string>
    <string name="closing_live">关播中</string>
    <string name="room_charge">本房间为计时房间，每分钟需支付</string>
    <string name="please_input_room_password">请输入房间密码</string>
    <string name="password_error">密码错误</string>
    <string name="coin_not_enough">余额不足，是否要充值？</string>
    <string name="contiune_watch_live">充值成功，是否继续观看直播？</string>
    <string name="charge_failed">充值失败，是否重新充值？</string>
    <string name="account_last">账户余额</string>
    <string name="pay_ali">支付宝</string>
    <string name="pay_wx">微信支付</string>
    <string name="can_get_total_cash">可提现金额</string>
    <string name="can_get_today_cash">今日可提现金额</string>
    <string name="get_cash">立即提现</string>
    <string name="common_problem">常见问题</string>
    <string name="location_permission_refused">您拒绝了定位的权限，请到设置中修改</string>
    <string name="welcome_back">欢迎回来</string>
    <string name="get_reward">领取</string>
    <string name="my_auction">我的竞拍</string>
    <string name="auction_detail">商品详情</string>
    <string name="auction_last_time">竞拍剩余时间</string>
    <string name="immediate_pay">立即付款</string>
    <string name="auction_last_price">最终出价</string>
    <string name="pay">付款</string>
    <string name="login_text">登录即代表你同意</string>
    <string name="login_text_2">《服务和隐私协议》</string>
    <string name="reset_pwd_success">重置密码成功</string>
    <string name="login_ing">登录中</string>
    <string name="living">正在直播</string>
    <string name="btn_close_live">关闭直播</string>
    <string name="admin_forbid_account">禁用账户</string>
    <string name="close_success">关闭成功</string>
    <string name="content_illegal">直播内容涉嫌违规</string>
    <string name="welcome_invite">欢迎，请输入邀请信息</string>
    <string name="maintain_tip">维护通知</string>
    <string name="choose_game">选择游戏</string>
    <string name="game_wait_start">即将开始，请稍后...</string>
    <string name="game_zjh_show_result">揭晓结果</string>
    <string name="game_zjh_start_support">开始支持</string>
    <string name="apk_url_not_exist">apk下载地址无效</string>
    <string name="attention_anchor">关注了主播</string>
    <string name="cliped">已复制到剪贴板</string>
    <string name="confrim_report">确定举报？</string>
    <string name="invalid">涉嫌违规</string>
    <string name="liang">靓</string>
    <string name="my">我的</string>
    <string name="charge_success">充值成功</string>
    <string name="recharge_txt">我要充值</string>
    <string name="charge_failure">充值失败</string>
    <string name="waiting">请稍后</string>
    <string name="send_a">送了1个</string>
    <string name="time_charge">计时</string>
    <string name="normal">普通</string>
    <string name="ticket">门票</string>
    <string name="cur_version">当前版本</string>
    <string name="cur_version_newset">已经是最新版本</string>
    <string name="give">赠送</string>
    <string name="person">人</string>
    <string name="di">第</string>
    <string name="day">天</string>
    <string name="choose">选择</string>
    <string name="download">下载</string>
    <string name="pay_success">付款成功</string>
    <string name="hour">时</string>
    <string name="min">分</string>
    <string name="sec">秒</string>
    <string name="last">剩</string>
    <string name="auto_close">自动关闭</string>
    <string name="pay_failure">付款失败</string>
    <string name="auction_success">竞价成功</string>
    <string name="lrc_not_found">歌词未找到</string>
    <string name="mp3_not_found">歌曲未找到</string>
    <string name="network_error">网络差，播放失败</string>
    <string name="mp4_error">网络链接异常,请稍后再试</string>
    <string name="hot">热门</string>
    <string name="newest">最新</string>
    <string name="near">附近</string>
    <string name="admin_cancel">被删除管理员</string>
</resources>