<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/view_title" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_12"
        android:background="@color/background" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/account"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/phone_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/please_input_phone_num"
            android:inputType="number"
            android:textColor="@color/subBodyTextColor"
            android:textColorHint="#c2c2cc"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#e2e2e2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/validate_code"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/validate_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/please_input_validate_code"
            android:inputType="number"
            android:textColor="@color/subBodyTextColor"
            android:textColorHint="#c2c2cc"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_validate_code"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/bg_circle_ff6490"
            android:gravity="center"
            android:onClick="registerClick"
            android:text="@string/send_validate_code"
            android:textColor="#fff" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#e2e2e2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/password"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/please_input_password"
            android:inputType="textPassword"
            android:textColor="@color/subBodyTextColor"
            android:textColorHint="#c2c2cc"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#e2e2e2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/confirm_password"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/please_input_password_again"
            android:inputType="textPassword"
            android:textColor="@color/subBodyTextColor"
            android:textColorHint="#c2c2cc"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#e2e2e2" />

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginTop="35dp"
        android:layout_marginRight="@dimen/dp_24"
        android:background="@drawable/bg_circle_ff6490"
        android:gravity="center"
        android:onClick="registerClick"
        android:paddingTop="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_12"
        android:text="@string/immediate_register"
        android:textColor="@color/white"
        android:textSize="16sp" />

</LinearLayout>