<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/view_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/old_password"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/old_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/please_input_old_password"
            android:inputType="textPassword"
            android:textColorHint="#e2e2e2"
            android:textSize="18sp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#e2e2e2"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/new_password"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/new_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/please_input_new_password"
            android:inputType="textPassword"
            android:textColorHint="#e2e2e2"
            android:textSize="18sp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#e2e2e2"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/confirm_password"
            android:textColor="@color/textColor"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/please_input_password_again"
            android:inputType="textPassword"
            android:textColorHint="#e2e2e2"
            android:textSize="18sp"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#e2e2e2"
        />

    <TextView
        android:id="@+id/btn_confirm"
        android:layout_width="270dp"
        android:layout_height="46dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/bg_btn_common"
        android:gravity="center"
        android:onClick="resetPwdClick"
        android:text="@string/comfirm_update"
        android:textColor="@color/white"
        android:textSize="16sp"
        />
</LinearLayout>