<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_pop_live_type"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:text="@string/choose_image"
            android:textColor="@color/text_color_88"
            android:textSize="12sp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lineColor" />

        <TextView
            android:id="@+id/btn_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/album"
            android:textColor="#007AFF"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lineColor" />

        <TextView
            android:id="@+id/btn_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/dp_16"
            android:paddingBottom="@dimen/dp_16"
            android:layout_gravity="center_horizontal"
            android:text="@string/camera"
            android:textColor="#007AFF"
            android:textSize="16sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:paddingTop="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_16"
        android:background="@drawable/bg_pop_live_type"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="#007AFF"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>

